SET(IMAGECUT_SRCS
  ImageGraphCut.cxx
  ImageToGraphFilter.h
  METISTools.cxx
  METISTools.h)

ADD_EXECUTABLE(gcut ${IMAGECUT_SRCS})
ADD_EXECUTABLE(gcut_makepts ImageToBoundaryGraph.cxx)

# Configure METIS 
INCLUDE_DIRECTORIES(${METIS_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(gcut ${METIS_LIBRARIES} ${ITK_LIBRARIES})
TARGET_LINK_LIBRARIES(gcut_makepts ${ITK_LIBRARIES})